<resources>
    <string name="app_name">App_MovilidadOficial</string>
    <string name="title_activity_nav__drawer">Nav_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="vacantes">Vacantes</string>
    <string name="convenios">Convenios</string>
    <string name="solicitud_alumno">Solicitudes alumnos</string>
    <string name="convocatorias">Convocatorias</string>
    <string name="publicar_anuncio">Publicar Anuncio</string>
    <string name="solicitud_docente">Solicitud Docente</string>
    <string name="configuracion">Configuracion</string>
    <string name="convocatoria">Convocatorias</string>
    <string name="txt_convenios">Convenios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>