<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.upeu.app_movilidadoficial.ui.home.HomeFragment"
        android:label="@string/vacantes"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/convenios"
        android:name="com.upeu.app_movilidadoficial.Convenios"
        android:label="@string/convenios"
        tools:layout="@layout/fragment_convenios" />

    <fragment
        android:id="@+id/solicitudes_alumnos"
        android:name="com.upeu.app_movilidadoficial.Solicitudes_alumnos"
        android:label="@string/solicitud_alumno"
        tools:layout="@layout/fragment_solicitudes_alumnos" />
    <fragment
        android:id="@+id/convocatorias"
        android:name="com.upeu.app_movilidadoficial.Convocatorias"
        android:label="@string/convocatorias"
        tools:layout="@layout/fragment_convocatorias" />
    <fragment
        android:id="@+id/solicitudes_docentes"
        android:name="com.upeu.app_movilidadoficial.Solicitudes_docentes"
        android:label="@string/solicitud_docente"
        tools:layout="@layout/fragment_solicitudes_docentes" />


</navigation>