<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_vacantes"
            android:title="@string/vacantes" />
        <item
            android:id="@+id/convenios"
            android:icon="@drawable/ic_convenios"
            android:title="@string/convenios" />
        <item
            android:id="@+id/solicitudes_alumnos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/solicitud_alumno" />
        <item
            android:id="@+id/convocatorias"
            android:icon="@drawable/ic_publicar_vacante"
            android:title="@string/convocatorias" />
        <item
            android:id="@+id/solicitudes_docentes"
            android:icon="@drawable/ic_soli_docente"
            android:title="@string/solicitud_docente" />
    </group>
    <group android:checkableBehavior="single">
        <item

           >

        </item>
    </group>
    <group android:checkableBehavior="single">
        <item

            >

        </item>
    </group>
    <group android:checkableBehavior="single">
        <item

            >

        </item>
    </group>
    <group android:checkableBehavior="single">
        <item

            >

        </item>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:iconTint="@color/upeu"
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="Cerrar Sesion">

        </item>
    </group>

</menu>